python-pycadf (0.4.1-1) unstable; urgency=medium

  * New upstream release.
  * Updated URLs of the project in debian/rules, debian/copyright and
    debian/control.
  * Review of (build-)dependencies.

 -- Thomas Goirand <zigo@debian.org>  Fri, 07 Mar 2014 15:10:28 +0800

python-pycadf (0.2-1) unstable; urgency=low

  * New upstream release.
  * Added --testr-args='--subunit  ' when calling testr

 -- Thomas Goirand <zigo@debian.org>  Tue, 01 Oct 2013 15:03:34 +0800

python-pycadf (0.1.5-1) unstable; urgency=low

  * Initial release. (Closes: #721906)

 -- Thomas Goirand <zigo@debian.org>  Thu, 05 Sep 2013 00:29:51 +0800