@@ -4,6 +4,7 @@ python-pycadf (0.4.1-1) unstable; urgency=medium
   * Updated URLs of the project in debian/rules, debian/copyright and
     debian/control.
   * Review of (build-)dependencies.
+  * Better testr / subunit console output.
 
  -- Thomas Goirand <zigo@debian.org>  Fri, 07 Mar 2014 15:10:28 +0800
 
